--- a/templates/pages/departmentpage.html
+++ b/templates/pages/departmentpage.html
@@ -25,7 +25,7 @@
             </div>
         {% endeditable %}
     {% endif %}-->
-    {% if LINKED_ORGA_CONTENT and RESEARCH_SLUG == page.departmentpage.slug %}
+    {% if linked_organization_content and research_slug == page.departmentpage.slug %}
         {% include 'core/inc/linked_organization_content.html' %}
     {% endif %}
 
