--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -54,20 +54,15 @@
                 <strong>{{ host_organization.description }}</strong><br/ >{% trans 'under the tutelage of' %} :<br />
                 <br />
                 {% if linked_organization_footer %}
-                    {% include 'core/inc/linked_organization_footer.html' %}
+                    {% include 'pages/page/includes/linked_organization_footer.html' %}
                 {% endif %}
             </div>
 
             <div class="col-xs-4 col-sm-2 col-sm-push-1 tal">
                 {% trans 'go to' %} :
-                <ul class="unstyled-list">
-                    <li>
-                        <a class="footer__link" href="https://www.centrepompidou.fr/" target="_blank" title="Centre Pompidou">Centre Pompidou</a>
-                    </li>
-                    <li>
-                        <a class="footer__link" href="http://www.bpi.fr/home.html" target="_blank" title="Bibliothèque Publique d’Information">Bibliothèque Publique d’Information</a>
-                    </li>
-                </ul>
+                {% if linked_organization_footer_2 %}
+                    {% include 'pages/page/includes/linked_organization_footer_2.html' %}
+                {% endif %}
             </div>
         </div>
 
