--- a/templates/pages/departmentpage.html
+++ b/templates/pages/departmentpage.html
@@ -25,8 +25,9 @@
             </div>
         {% endeditable %}
     {% endif %}-->
+    {{ linked_organization_content.all }}
     {% if linked_organization_content and research_slug == page.departmentpage.slug %}
-        {% include 'core/inc/linked_organization_content.html' %}
+        {% include 'pages/page/includes/linked_organization_content.html' %}
     {% endif %}
 
     {% if page.departmentpage.content %}
