--- a/templates/agenda/includes/event_metainfo_line.html
+++ b/templates/agenda/includes/event_metainfo_line.html
@@ -14,7 +14,7 @@
 
 {% if unit_booking %}
 
-    {% if event.prices.all.0|floatformat != '0' and event.prices.all|length > 0 and not is_archive %}
+    {% if event.prices.all and not is_archive %}
         <p>
             {% if event.trainings.all|length %}
                 {% with event.links.all as links %}
