--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -247,7 +247,7 @@
                                                 </div>
 
                                                 <div class="project-details__item-title">
-                                                    {% trans "Ircam teams" %}
+                                                    {% trans "teams" %} ({{ host_organization }})
                                                 </div>
                                                 <div class="project-details__item-desc">
                                                     {% for team in project.teams.all %}
